--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,45 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+html{
+  padding:10px 5px 0px 10px;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.blueDiv{
+  background-color:blue;
+  /*position:absolute;*/
+  height:40%
+  width:100%;
+}
+.whiteDiv{
+  justify-content:center; 
+  background-color:white;
+ /* position:absolute;*/
+  height:40%
+  width:100%;
+}
+.group{
+  margin:0;
+  padding:10rem 5rem 0rem 10rem;
+  background-color:green;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align:center;
+ 
+}
+
+li {
+  display: inline;
+}
+footer{
+  
+}
+p{
+  text-align:left;
 }
