--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,76 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.blue-image{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 300px;
+  z-index: -1;
+  background: url(../images/bgtile.png);
+}
+
+
+.container{
+  width: 75%;
+  margin: 10px auto;
+  display: flex;
+}
+
+.rgCon{
+  display: flex;
+  flex-direction: column;
+}
+
+.txt {
+  background: white;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 30px;
+  width: 75%;
+  box-shadow: 1px 1px 5px grey;
+}
+
+.login { 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 75%;
+}
+
+.login button{
+  background: linear-gradient(#65a4db, #3a6890);;
+  border:#3a6890;
+  color:silver;
+  font-weight: bold;
+  box-shadow: 0px 0px 10px 1px #363535;
+}
+
+
+.footer ul { 
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+  margin: 10px auto;
+}
+
+.footer ul li {
+  list-style: none;
+}
+
+.footer ul li:last-child {
+  color: grey;
+}
+
+.bColor {
+  color: #3a6890;
 }
