--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -14,7 +14,7 @@ body {
 .container{
   margin: auto;
   width: 90%;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .container-rigth{
@@ -30,16 +30,16 @@ body {
 }
 
 header{
-  margin-top: 20px;
-  width: 100%;
+  margin-top: 0 auto;
+  width: 98%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 header button{
-  background-color: transparent;
-  height: 40%;
+  background: url("../images/bgtile.png") repeat-x right top;
+  height: 50%;
   width: 15%;
   display: flex;
   justify-content: space-around;
@@ -57,7 +57,7 @@ header button{
 
 .bg-text h1{
   color: #06365f;
-  width: 60%;
+  width: 50%;
   padding-top: 20px;
 }
 
@@ -67,6 +67,7 @@ header button{
 }
 
 .apps img{
+  padding-top: 20px;
   margin-right: 20px;
 }
 
@@ -86,6 +87,7 @@ header button{
 
 .links ul li{
   list-style: none;
+  font-weight: bold;
   color: #1c5380;
   float: left;
   margin-right: 15px;
