--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,154 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.bgtile {
+  background-image: url(../images/bgtile.png);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 400px;
+}
+
+.display {
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  width: 70em;
+}
+
+.content-2 {
+  padding: 2rem 4rem;
+  width: 67%;
+}
+
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
+.log-in {
+  display: flex;
+  justify-content: end;
+  padding: 0.5rem;
+  background: rgba(121, 155, 191, 1);
+  background: -moz-linear-gradient(
+    top,
+    rgba(121, 155, 191, 1) 0%,
+    rgba(60, 108, 148, 1) 100%
+  );
+  background: -webkit-gradient(
+    left top,
+    left bottom,
+    color-stop(0%, rgba(121, 155, 191, 1)),
+    color-stop(100%, rgba(60, 108, 148, 1))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(121, 155, 191, 1) 0%,
+    rgba(60, 108, 148, 1) 100%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(121, 155, 191, 1) 0%,
+    rgba(60, 108, 148, 1) 100%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(121, 155, 191, 1) 0%,
+    rgba(60, 108, 148, 1) 100%
+  );
+  background: linear-gra115emdient(
+    to bottom,
+    rgba(121, 155, 191, 1) 0%,
+    rgba(60, 108, 148, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#799bbf', endColorstr='#3c6c94', GradientType=0);
+  -webkit-box-shadow: 0px 1px 20px 3px rgba(60, 108, 148, 0.48);
+  -moz-box-shadow: 0px 1px 20px 3px rgba(60, 108, 148, 0.48);
+  box-shadow: 0px 1px 20px 3px rgba(60, 108, 148, 0.48);
+  border-radius: 5px;
+}
+
+.log-in a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.description {
+  background-color: white;
+  border-radius: 5px;
+  padding: 30px;
+  -webkit-box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
+  -moz-box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
+  box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
+}
+
+.description h1 {
+  font-size: 2em;
+  color: #26415a;
+}
+
+.description p {
+  padding-top: 0.5em;
+  font-size: 1.2em;
+}
+
+.stores {
+  padding-top: 3em;
+}
+
+.stores-img {
+  padding-right: 1.5em;
+  height: 62px;
+  width: auto;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+}
+
+.info-list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.no-list-style {
+  list-style-type: none;
+  padding-left: 1em;
+}
+
+.no-decoration {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.blue {
+  color: #3c6c94;
+}
+
+.gray {
+  color: gray;
 }
