--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -100,12 +100,10 @@ body {
 }
 
 .description {
-  background-color: white;
-  border-radius: 5px;
   padding: 30px;
-  -webkit-box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
-  -moz-box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
-  box-shadow: 0px -2px 18px -2px rgba(0, 0, 0, 0.87);
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .description h1 {
