--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,107 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
+html {
+  margin: 0;
+  width: 100%;
+  height: 90vh;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  justify-content: center;
+  background: url("../images/bgtile.png") no-repeat center top;
+  background-size: 100% 350px;
+}
+
+.container {
+  display: flex;
+  margin: 0 auto;
+  width: 50%;
+  height: 600px;
+  margin-top: 150px;
+}
+.box {
+  height: 600px;
+  width: 50%;
+  display: inline-block;
+}
+
+.display-flex {
+  display: flex;
+}
+.flex-row {
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+
+  border-radius: 2px;
+
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 10px 10px 10px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.btn a {
+  text-decoration: none;
+  color: white;
+}
+.btn img {
+  height: 30px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.box-text {
+  width: auto;
+  margin-top: 30px;
+  background-image: url("../images/frame.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 10px 30px 30px 30px;
+  align-items: baseline;
+  text-align: left;
+}
+.box-text h2 {
+  color: #1c5380;
+}
+.list {
+  bottom: 0;
+  text-align: center;
+}
+.list ul li {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  display: inline-block;
+  text-transform: uppercase;
+}
+.list ul li a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 800;
+  margin-left: 15px;
+}
+#copyright {
+  text-transform: uppercase;
+  color: grey;
+  font-weight: 800;
+  margin-left: 25px;
 }
